--- a/performance_talk/Performance Python.ipynb
+++ b/performance_talk/Performance Python.ipynb
@@ -26,12 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "id": "d170d833",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import math\n",
     "rows = 200\n",
     "cols = 200\n",
     "A = np.random.random((rows,cols))\n",
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "id": "ba0d2ded",
    "metadata": {},
    "outputs": [
@@ -56,7 +57,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.29 s ± 271 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "10.6 s ± 18.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "id": "b99d7717",
    "metadata": {},
    "outputs": [
@@ -119,7 +120,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.5 s ± 56.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "9.8 s ± 18.6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -130,7 +131,7 @@
     "for i in range(rows):\n",
     "    for j in range(cols):\n",
     "        for k in range(rows):\n",
-    "            C[i][j] += A[k][i] * B[j][k]\n"
+    "            C[i,j] += A[i,k] * B[k,j]\n"
    ]
   },
   {
@@ -159,13 +160,128 @@
    "id": "93deb4ed",
    "metadata": {},
    "source": [
-    "This spead things up a bit, but not as much we could do.\n",
+    "This speed things up a bit, but not as much we could do.\n",
     "\n",
     "\n",
     "## Using modules\n",
     "\n",
-    "A huge advantage of Python is the large environment of modules made available. We already "
+    "A huge advantage of Python is the large environment of modules made available. We already cheated a bit by using numpy to create our matrices above. Below, we can see the effects of including more and more of the functionality of numpy. As an example, we'll look at applying a trigonometric function to an array of values. The purely Python version looks like"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "1363b871",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.22 s ± 82.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "\n",
+    "size = 10000000\n",
+    "vals = list(range(size))\n",
+    "ans = list(range(size))\n",
+    "for i in range(size):\n",
+    "    ans[i] = math.tan(vals[i])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "207f677a",
+   "metadata": {},
+   "source": [
+    "It doesn't seem too bad in this case, since the work being done isn't too complicated. But it could be much worse for a more computationally intensive job. Python is wasting time on every call to tan, trying to figure out whether it can apply that function or not. We can force strict typing in Python by using numpy objects. Also, numpy provides functions that operate on entire objects at once."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "6f6e9528",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "740 ms ± 14.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "size = 10000000\n",
+    "nd = np.arange(size)\n",
+    "nd_ans = np.tan(nd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "9c0a933a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "size = 1000000\n",
+    "vals = list(range(size))\n",
+    "ans = list(range(size))\n",
+    "nd = np.arange(size)\n",
+    "nd_ans = np.arange(size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "20c6ae0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "473 ms ± 7.33 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "for i in range(size):\n",
+    "    ans[i] = math.tan(vals[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "3127b1a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "803 ms ± 8.41 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "for i in range(size):\n",
+    "    nd_ans[i] = math.tan(nd[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2eae735",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -184,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
