--- a/performance_talk/Performance Python.ipynb
+++ b/performance_talk/Performance Python.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "d170d833",
    "metadata": {},
    "outputs": [],
@@ -48,18 +48,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "ba0d2ded",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.29 s ± 271 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "C = np.zeros((rows,cols))\n",
@@ -78,21 +70,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "d84f7db3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8297.66274749814"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "C[1,1]"
    ]
@@ -111,18 +92,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "b99d7717",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6.5 s ± 56.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "C = np.zeros((rows,cols))\n",
@@ -135,23 +108,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "61544dbc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8297.66274749814"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "C[1,1]"
+    "%%timeit\n",
+    "C = A * B"
    ]
   },
   {
@@ -166,6 +129,69 @@
     "\n",
     "A huge advantage of Python is the large environment of modules made available. We already "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "0736a9d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fib1(n):\n",
+    "    \"\"\"Print the Fibonacci series up to n.\"\"\"\n",
+    "    a, b = 0, 1\n",
+    "    while b < n:\n",
+    "        a, b = b, a + b\n",
+    "\n",
+    "    \n",
+    "import fib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "68f4cab5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.06 µs ± 33.3 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "fib1(100000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8a92bd31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "596 ns ± 28.7 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "fib.fib(100000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a3b7375",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
